<resources>
    <string name="app_name">ChunFungSuen_MAPD711_MiniProject-PhoneApp</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_api_key">AIzaSyBlgz0RJlUUzIY5nW5DvxpMAb9CogjcyPk</string>
    <string name="description_text">Welcome! Here you can order the phone of the following brands!</string>
    <string name="apple_brand_name">apple</string>
    <string name="samsung_brand_name">samsung</string>
    <string name="google_pixel_brand_name">google pixel</string>
    <string name="oppo_brand_name">oppo</string>
    <string name="user_textView_text">User:</string>
    <string name="password_textView_text">Password:</string>
    <string name="new_user_welcome_text">New user? You can sign up here!</string>
    <string name="sign_in_btn_text">Sign in</string>
    <string name="sign_up_btn_text">Sign up</string>
    <string name="customer_info_form_description">Customer information</string>
    <string name="customer_info_form_title_user_name">User name:</string>
    <string name="customer_info_form_title_password">Password:</string>
    <string name="customer_info_form_title_firstname">Firstname:</string>
    <string name="customer_info_form_title_lastname">Lastname:</string>
    <string name="customer_info_form_title_address">Address:</string>
    <string name="customer_info_form_title_city">City:</string>
    <string name="customer_info_form_title_country">Country:</string>
    <string name="customer_info_form_title_postal_code">Postal code:</string>
    <string name="customer_info_form_title_phone_number">Telephone:</string>
    <string name="customer_info_form_title_credit_card_no">Credit card number:</string>
    <string name="customer_info_form_title_card_type">Card type:</string>
    <string name="customer_info_form_title_card_expiration">Card expiration:</string>
    <string name="customer_info_form_title_CVC">CVV/CVC:</string>
    <string name="submit_sign_up_btn">Sign up</string>
    <string name="welcome_message_place_order_template">Welcome %s! Click to order your favourite phone!</string>
    <string name="order_form_description">You selected:</string>
    <string name="product_info_title_phone_model">Phone model:</string>
    <string name="product_info_title_product_id">Product id:</string>
    <string name="product_info_title_phone_make">Phone make:</string>
    <string name="product_info_title_phone_color">Phone color:</string>
    <string name="product_info_title_storage_capacity">Storage capacity:</string>
    <string name="product_info_title_price">Price:</string>
    <string name="order_form_title_order_date">Order date:</string>
    <string name="move_to_shop_choosing_btn_text">Next to choose a shop</string>
    <string name="order_list_description">Orders</string>
    <string name="order_list_item_title_order_id">Order id:</string>
    <string name="order_list_item_title_customer_id">Customer id:</string>
    <string name="order_list_item_title_order_date">Order date:</string>
    <string name="order_list_item_title_status">Status:</string>
    <string name="menu_phone_model_list">Phone model list</string>
    <string name="menu_update_order">Update order</string>
    <string name="menu_update_customer_info">Update customer info</string>
    <string name="update_customer_info_btn">Update</string>
    <string name="order_status_text_ordered">Ordered</string>
    <string name="order_status_text_cancelled">Cancelled</string>
    <string name="order_status_text_delivered">Delivered</string>
    <string name="google_place_search_api_url">https://maps.googleapis.com/maps/api/place/textsearch/json</string>
    <string name="google_place_detail_api_url">https://maps.googleapis.com/maps/api/place/details/json</string>
    <string name="google_place_photo_api_url">https://maps.googleapis.com/maps/api/place/photo</string>
    <string name="google_directions_api_url">https://maps.googleapis.com/maps/api/directions/json</string>
    <string name="switch_to_standard_text">Standard</string>
    <string name="switch_to_satellite_text">Satellite</string>
    <string name="switch_to_hybrid_text">Hybrid</string>
    <string name="color_spinner_prompt">Choose a color</string>
    <string name="phone_order_title_color">Color:</string>
    <string name="phone_order_title_storage_capacity">Storage capacity:</string>
    <string name="select_shop_btn_text">Select</string>
    <string name="wish_list_title_text">Wish List</string>
    <string name="menu_wish_list">Wish List</string>
    <string name="wish_list_storage_dir">wishList</string>
</resources>