<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id = "@+id/order_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.OrderFormActivity">

    <TextView
        style="@style/order_form_description_style"
        android:text="@string/order_form_description" />

    <TableLayout
        style="@style/order_form_style"
        >

        <TableRow>
            <TextView
                style="@style/order_form_title_style"
                android:text="@string/product_info_title_phone_model" />

            <TextView
                android:id="@+id/order_form_phone_model"
                style="@style/order_form_value_style" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/order_form_title_style"
                android:text="@string/product_info_title_product_id" />

            <TextView
                android:id="@+id/order_form_product_id"
                style="@style/order_form_value_style" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/order_form_title_style"
                android:text="@string/product_info_title_phone_make" />

            <TextView
                android:id="@+id/order_form_phone_make"
                style="@style/order_form_value_style" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/order_form_title_style"
                android:text="@string/product_info_title_price" />

            <TextView
                android:id="@+id/order_form_price"
                style="@style/order_form_value_style" />
        </TableRow>
    </TableLayout>

    <TextView
        style="@style/order_form_title_order_date_style"
        android:text="@string/order_form_title_order_date" />

    <EditText
        android:id="@+id/order_form_order_date"
        style="@style/order_form_input_order_date_style"
        android:hint="dd/MM/yyyy"/>

    <TextView
        style="@style/color_spinner_title_style"
        android:id="@+id/color_spinner_title"
        android:text="@string/phone_order_title_color" />

    <Spinner
        style="@style/color_spinner_style"
        android:id="@+id/color_spinner"
        android:prompt="@string/color_spinner_prompt" />

    <TextView
        android:id="@+id/storage_capacity_radio_group_title"
        style="@style/storage_capacity_radio_group_title_style"
        android:text="@string/phone_order_title_storage_capacity" />

    <RadioGroup
        style="@style/storage_capacity_radio_group_style"
        android:id="@+id/storage_capacity_radio_group" />

    <Button
        android:id="@+id/move_to_shop_choosing_btn"
        style="@style/move_to_shop_choosing_btn_style"
        android:text="@string/move_to_shop_choosing_btn_text" />
</LinearLayout>